--- a/Instagram clone/PostTableViewCell.xib
+++ b/Instagram clone/PostTableViewCell.xib
@@ -17,7 +17,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="462"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="462"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="461"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BUb-cr-cO6">
@@ -53,7 +53,7 @@
                         <rect key="frame" x="68" y="337" width="92" height="30"/>
                         <state key="normal" title="コメント入力"/>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9WS-eL-599">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9WS-eL-599">
                         <rect key="frame" x="18" y="413.66666666666674" width="284" height="30.333333333333314"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -93,7 +93,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="captionLabel" destination="9WS-eL-599" id="PPB-r0-wA1"/>
+                <outlet property="captionLabel" destination="lF2-lZ-hMY" id="cRv-PQ-SLL"/>
                 <outlet property="commentBtn" destination="Ddv-r5-jNQ" id="Ot0-c4-hoq"/>
                 <outlet property="commentLabel" destination="9WS-eL-599" id="AAZ-jg-dtJ"/>
                 <outlet property="dataLabel" destination="cVa-s6-n4y" id="djw-Ek-pdv"/>
